# Tracer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.txt
scene_files/: scene00.txt  scene01.txt
src/: Camera.h  Camera.hpp  Common.h  Image.cpp  Image.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ScenePrimative.h  ScenePrimative.hpp  Tracer.h  Vector.h  main.cpp
test/: ColorTest.cpp  ImageTest.cpp  MaterialManagerTest.cpp  MaterialTest.cpp  PixelTest.cpp  ScenePrimativeTest.cpp  SceneTest.cpp  SphereTest.cpp  VectorTest.cpp
